@@ -1,3 +1,10 @@
+Dommerplan 1.5.2 - Martin Juhl - mj@casalogic.dk
+  
+  * Tilføjelser til Mobil-site
+  * Ny dommer-statistik.. 
+  * Tilføjelser til brugerdel
+  * Diverse Fixes...
+
 Dommerplan 1.5.1 - Martin Juhl - mj@casalogic.dk
   
   * Tilføjelser til Mobil version
